--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron ./app"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "electron-prebuilt": "^1.2.2"
+    "Q": "0.0.1",
+    "asar": "^0.11.0",
+    "electron-prebuilt": "^1.2.5",
+    "fs-jetpack": "^0.9.2",
+    "rcedit": "^0.5.0"
   }
 }
