--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
     "electron-prebuilt": "^1.2.5",
     "fs-jetpack": "^0.9.2",
     "rcedit": "^0.5.0"
+  },
+  "dependencies": {
+    "gulp-minify-css": "^1.2.4",
+    "gulp-uglify": "^1.5.4",
+    "gulp-usemin": "^0.3.23",
+    "q": "^1.4.1"
   }
 }
